--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <Version>3.5.0-alpha8</Version>
+        <TargetFramework>net10.0</TargetFramework>
+        <Version>3.5.0-alpha9</Version>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -14,8 +14,8 @@
             Please consider giving feedback if you use the library in your own software projects.
         </Description>
         <PackageReleaseNotes></PackageReleaseNotes>
-        <Copyright>Copyright 2015-2025 John Nordberg</Copyright>
-        <PackageTags>XBRL iXBRL XBRL-XML XBRL-CSV XBRL-JSON</PackageTags>
+        <Copyright>Copyright 2015-2026 John Nordberg</Copyright>
+        <PackageTags>XBRL iXBRL xBRL-XML xBRL-CSV xBRL-JSON</PackageTags>
     </PropertyGroup>
 
     <PropertyGroup>
