--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Test
-      run: dotnet --project Diwen.Xbrl.Tests
+      run: dotnet run --project Diwen.Xbrl.Tests
